<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="414dp"
        android:layout_height="785dp"
        android:layout_x="-3dp"
        android:layout_y="-46dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/e_jarkom_uiux_4"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="-50dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="376dp"
        android:layout_height="80dp"
        android:layout_x="20dp"
        android:layout_y="580dp"
        android:text="@string/kuis_4"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="279dp"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="376dp"
        android:layout_height="80dp"
        android:layout_x="21dp"
        android:layout_y="478dp"
        android:text="@string/kuis_3"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="375dp"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/button4"
        android:layout_width="376dp"
        android:layout_height="80dp"
        android:layout_x="20dp"
        android:layout_y="378dp"
        android:text="@string/kuis_2"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="469dp"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/button5"
        android:layout_width="376dp"
        android:layout_height="80dp"
        android:layout_x="20dp"
        android:layout_y="287dp"
        android:text="@string/kuis_1"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="572dp"
        tools:visibility="invisible" />

</AbsoluteLayout>